<resources>
    <string name="app_name">SuppleClock</string>
    <string name="alarm_clocks">Будильники</string>
    <string name="calendar">Календарь</string>
    <string name="achievements">Достижения</string>

    <string name="name">Название</string>
    <string name="alarm_clock">Будильник</string>
    <string name="allowed_to_delay">Можно отложить</string>
    <string name="necessary_wakeup">Обязательно проснуться</string>
    <string name="morning_time">Утреннее время</string>
    <string name="tune">Мелодия</string>
    <string name="by_default">По умолчанию</string>

    <string name="delete_alarm_clock">Удалить будильник</string>
    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="turn_off">Выключить</string>
    <string name="delay">Отложить</string>
    <string name="work">Работа</string>
    <string name="_14_10">14:10</string>
    <string name="sunday_12_feb">Воскресенье, 12 февраля</string>
    <string name="type_good_morning">Введите \"Доброе утро\" для отключения будильника</string>
    <string name="type_words">Введите фразу</string>
    <string name="hold_to_turn_off">Зажмите и удерживайте кнопки громкости для отключения будильника</string>
    <string name="shake_to_turnoff">Встряхните телефон для отключения будильника</string>
    <string name="sleep_remind">Напоминание ложиться спать</string>
    <string name="sleep_target">Цель сна</string>
    <string name="evening_chill">Отдых перед сном</string>
    <string name="_8_hours">8 ч</string>
    <string name="_45_minutes">45 мин</string>
    <string name="morning_extra_time">Период дополнительного\nутреннего времени</string>
    <string name="extra_time_hint">Вы проснётесь на 45 минут раньше, если сработает функция утреннего времени.</string>
    <string name="turning_off_alarm_ways">Способ отключения\nбудильника</string>
    <string name="random">Случайный</string>
    <string name="solve_way_hint">Если вы выбрали опцию “Обязательно проснуться”, то отключение будильника будет производиться решением одного из заданий.</string>
    <string name="alarms">Будильники</string>
    <string name="_1_time">1 раз</string>
    <string name="_09_10">09:10</string>
    <string name="every_day">Каждый день</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="add_week">Добавить неделю</string>
    <string name="current_week">Текущая неделя</string>
    <string name="_1">1</string>
    <string name="figure_out_since">Рассчитать с:</string>
    <string name="figure_out_until">До:</string>
    <string name="_26_feb">26 февраля</string>
    <string name="indefinitely">бессрочно</string>
    <string name="_9_30">9:30</string>
    <string name="monday_f">Понедельник</string>
    <string name="tuesday_f">Вторник</string>
    <string name="wednesday_f">Среда</string>
    <string name="thursday_f">Четверг</string>
    <string name="friday_f">Пятница</string>
    <string name="saturday_f">Суббота</string>
    <string name="sunday_f">Воскресенье</string>
    <string name="alarm_time">Время сигнала:</string>
    <string name="done">Готово</string>
    <string name="holiday">Выходной день</string>
    <string name="feb_2023">Февраль 2023</string>
    <string name="_15_feb">15 Февраля</string>
    <string name="random_order">В случайном порядке</string>
    <string name="music">Музыка</string>
    <string name="add">Добавить</string>
    <string name="master_of_puppets_metallica">Master of Puppets – Metallica</string>

    <string-array name="alarm_types">
        <item>Обычный</item>
        <item>Сменный</item>
        <item>Шаблонный</item>
    </string-array>

    <string-array name="turn_off_type">
        <item>Случайный</item>
        <item>Ввод фразы</item>
        <item>Потрясти телефон</item>
        <item>Удерживать кнопки громкости</item>
    </string-array>

    <string name="choose_alarm_type">Выберите тип будильника</string>
    <string name="notification_title">Будильник</string>
    <string name="notification_channel_name">alarm_notification</string>
    <string name="notifiaction_channel_description">Уведомдления будильника</string>
    <string name="notification_channel_id">SUPPLE_CLOCK_ALARM</string>
    <string name="no_allowed_delays">Будильник больше нельзя откладывать</string>
    <string name="preference_file_key">supple_clock_shared_pref</string>
    <string name="sleep_notification">sleep_notification</string>
    <string name="sleep_hours_target">sleep_hours_target</string>
    <string name="sleep_minutes_target">sleep_minutes_target</string>
    <string name="rest_before_sleep">rest_before_sleep</string>
    <string name="extra_morning_time">extra_morning_time</string>
    <string name="turn_off_type">turn_off_typ</string>
    <string name="alarm_common_id">alarm_common_id</string>
    <string name="alarm_delays_allowed">alarm_delays_allowed</string>
    <string name="choose_turn_off_type">Выберете способ отключения</string>
    <string name="select_time">Выберете время</string>
    <string name="notification_before_sleep_channel_name">notification_cannel_name</string>
    <string name="notifiaction_defore_sleep_channel_description">Пора ложиться спать</string>
    <string name="notification_before_sleep_channel_id">SUPPLE_CLOCK_GO_SLEEP</string>
    <string name="go_sleep_message">Пора ложиться спать</string>
    <string name="go_sleep_ticket">Скоро начнётся период отдыха</string>
</resources>