<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AlarmRingingFragment"
    android:background="@color/background">

    <Button style="?android:attr/borderlessButtonStyle"
        android:id="@+id/turn_off_alarm"
        android:layout_width="142dp"
        android:layout_height="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="36dp"
        android:text="@string/turn_off"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/navigation_foreground"
        android:background="@drawable/button_radius40"/>

    <Button style="?android:attr/borderlessButtonStyle"
        android:id="@+id/delay_alarm"
        android:layout_width="200dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="42dp"
        android:text="@string/delay"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/navigation_foreground"
        android:background="@drawable/button_radius40"/>
    
    <TextView
        android:id="@+id/alarm_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work"
        android:textSize="26sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/delay_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_14_10"
        android:textColor="@color/white"
        android:textSize="64sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/alarm_name"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_textView"
        android:layout_marginTop="-10dp"
        android:text="@string/sunday_12_feb"
        android:textColor="@color/navigation_main"
        android:textSize="18sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>