<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment"
    android:background="@color/background">

    <Button style="?android:attr/borderlessButtonStyle"
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_back_chevrone"
        android:drawablePadding="-20dp"
        android:padding="0dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="55dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/item_radius18">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/sleep_remind"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="18dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/remind_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="18dp"
                android:checked="true"
                android:gravity="center_vertical"
                app:switchMinWidth="47dp"
                android:textOn=""
                android:textOff=""
                android:thumb="@drawable/custom_switch_thumb"
                app:track="@drawable/custom_switch_track"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View style="@style/Linear_Divider"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/sleep_target"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="18dp"/>

            <TextView
                android:id="@+id/sleep_target"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/_8_hours"
                android:gravity="right|center_vertical"
                android:textColor="@color/navigation_main"
                android:textSize="14sp"
                android:layout_marginEnd="18dp"
                tools:ignore="RtlHardcoded" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View style="@style/Linear_Divider"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/evening_chill"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="18dp"/>

            <TextView
                android:id="@+id/evening_chill"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_vertical|right"
                android:text="@string/_45_minutes"
                android:textColor="@color/navigation_main"
                android:textSize="14sp"
                android:layout_marginEnd="18dp"
                tools:ignore="RtlHardcoded" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/extra_time_layout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/item_radius18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/morning_extra_time"
            android:lineSpacingExtra="2dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginStart="18dp"/>

        <TextView
            android:id="@+id/extra_time_textView"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center_vertical|right"
            android:text="@string/_45_minutes"
            android:textColor="@color/navigation_main"
            android:textSize="14sp"
            android:layout_marginEnd="18dp"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/extra_time_hint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/extra_time_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="6dp"
        android:text="@string/extra_time_hint"
        android:textColor="@color/navigation_main"
        android:textSize="12sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/solve_way"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@+id/extra_time_hint_layout"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/item_radius18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/turning_off_alarm_ways"
            android:lineSpacingExtra="2dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginStart="18dp"/>

        <TextView
            android:id="@+id/solve_way_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center_vertical|right"
            android:text="@string/random"
            android:textColor="@color/navigation_main"
            android:textSize="14sp"
            android:layout_marginEnd="18dp"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/solve_way"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="6dp"
        android:text="@string/solve_way_hint"
        android:textColor="@color/navigation_main"
        android:textSize="12sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>