<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_radius18"
        android:layout_marginHorizontal="20dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/weekday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/monday_f"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weekday"
            android:layout_marginTop="18dp"
            android:layout_marginStart="24dp"
            android:text="@string/alarm_time"
            android:textSize="14sp"
            android:textColor="@color/white" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="142dp"
            android:timePickerMode="spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_time"
            android:layout_marginTop="17dp"
            android:theme="@style/TimePickerDetailsStyle"
            android:background="@drawable/time_picker_radius10"/>

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_picker"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_radius14"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/navigation_foreground"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/holiday_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/done_button"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_radius14"
            android:text="@string/holiday"
            android:textAllCaps="false"
            android:textColor="@color/navigation_foreground"
            android:textSize="14sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>