<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AlarmDetails"
    android:background="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/item_radius18">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="18dp"
                android:text="@string/name"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="18dp"
                android:gravity="end"
                android:hint="@string/alarm_clock"
                android:inputType="textCapSentences"
                android:textColorHint="@color/navigation_main"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="@null"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View style="@style/Linear_Divider"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="18dp"
                android:text="@string/allowed_to_delay"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/plus_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_plus_icon"
                android:background="?android:selectableItemBackground"/>

            <TextView
                android:id="@+id/delay_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/plus_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="7dp"
                android:text="1 раз"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/minus_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toStartOf="@+id/delay_number"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="7dp"
                android:src="@drawable/ic_minus_icon"
                android:background="?android:selectableItemBackground"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
        <View style="@style/Linear_Divider"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="18dp"
                android:text="@string/necessary_wakeup"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="18dp"
                android:checked="true"
                android:gravity="center_vertical"
                app:switchMinWidth="47dp"
                android:textOn=""
                android:textOff=""
                android:thumb="@drawable/custom_switch_thumb"
                app:track="@drawable/custom_switch_track"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View style="@style/Linear_Divider"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="18dp"
                android:text="@string/morning_time"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="18dp"
                android:checked="false"
                android:gravity="center_vertical"
                app:switchMinWidth="47dp"
                android:textOn=""
                android:textOff=""
                android:thumb="@drawable/custom_switch_thumb"
                app:track="@drawable/custom_switch_track"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/item_radius18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="18dp"
            android:text="@string/tune"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="18dp"
            android:text="@string/by_default"
            android:textSize="14sp"
            android:textColor="@color/navigation_main"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
